# EstacaoMeterologica

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_main.c  wifi_connect.c
